<resources>
    <string name="app_name">Examen-Practico-U2</string>

    //Pantalla principal
    <string name="Titulo_1">PLATAFORMA I</string>
    <string name="Titulo_2">EXAMEN PRÁCTICO</string>
    <string name="Titulo_3">2DA EVALUACIÓN PARCIAL</string>
    <string name="Integrante1">RODRIGO REYES </string>
    <string name="Integrante2">ANTONIO VAZQUEZ</string>

    <string name="boton_1">CAPTURAR</string>
    <string name="boton_2">MOSTRAR</string>
    <string name="boton_3">SALIR</string>

    //Capturar
    <string name="datos_titulo">DATOS</string>
    <string name="datos_nombre">Nombre:</string>
    <string name="datos_descripcion">Descripción:</string>
    <string name="datos_dir_tel">Dirección y teléfono:</string>
    <string name="datos_boton_guardar">GUARDAR</string>

    //Seleccionar imagen
    <string name="selImg_titulo">SELECCIONA LA IMAGEN</string>

    //Mostrar
    <string name="mostrar_titulo">SELECCIONA TU RESTAURANTE</string>

    //Evaluación
    <string name="evaluacion_titulo">EVALUACIÓN</string>
    <string name="evaluacion_opinion">TU OPINIÓN</string>

</resources>
