<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/txtVwTitulo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_1"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVwTitulo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_2"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVwTitulo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_3"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVwIntegrante1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Integrante1"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVwIntengrante2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Integrante2"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:srcCompat="@drawable/perrito" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingBottom="15dp">

        <Button
            android:id="@+id/btnCapturar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#5B28AE"
            android:text="@string/boton_1"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#AE1111"
            android:text="@string/boton_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#5C9EE4"
            android:text="@string/boton_3"
            android:textColor="@android:color/background_light" />
    </LinearLayout>
</LinearLayout>