<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Capturar">

    <TextView
        android:id="@+id/capTxtVwTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/datos_titulo"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/capImgVwImagen"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        app:srcCompat="@drawable/burritos" />

    <TextView
        android:id="@+id/capTxtVwNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:text="@string/datos_nombre"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/capEditTxtNombre"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/capTxtVwDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:text="@string/datos_descripcion"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/capEditTxtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/capTxtVwDirTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:text="@string/datos_dir_tel"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/capEditTxtDirTel"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/borde"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/capBtnGuardar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8F8F8F"
            android:hapticFeedbackEnabled="false"
            android:text="@string/datos_boton_guardar"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>